panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__nullptr__test_assignment_to_nullptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/nullptr/test_assignment_to_nullptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_assignment_to_nullptr.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `typeof(nullptr)` nullptr)
         (declaration b~3 `typeof(nullptr)` (cast `typeof(nullptr)` nullptr))
         (expression (assign (name a~2 `typeof(nullptr)`) nullptr))
         (expression (assign (name b~3 `typeof(nullptr)`) (cast `typeof(nullptr)` nullptr)))
         (expression (assign (name a~2 `typeof(nullptr)`) (name b~3 `typeof(nullptr)`)))
         (expression (assign (name b~3 `typeof(nullptr)`) (cast `typeof(nullptr)` (name a~2 `typeof(nullptr)`))))
         (expression (assign (name a~2 `typeof(nullptr)`) 0))
         (expression (assign (name a~2 `typeof(nullptr)`) (multiply 2 0)))
         (expression (assign (name a~2 `typeof(nullptr)`) (cast `ptr<void>` 0)))
         (expression (assign (name b~3 `typeof(nullptr)`) (cast `typeof(nullptr)` 0)))
         (expression (assign (name b~3 `typeof(nullptr)`) (cast `typeof(nullptr)` (multiply 2 0))))
         (expression (assign (name b~3 `typeof(nullptr)`) (cast `typeof(nullptr)` (cast `ptr<void>` 0)))))))

----- stderr -----
