panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__nullptr__test_nullptr_to_bool_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/nullptr/test_nullptr_to_bool_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_nullptr_to_bool_conversion.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (cast `bool` nullptr)))
         (declaration b~3 `bool` nullptr)
         (return (name b~3 `bool`)))))

----- stderr -----
