panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__nullptr__test_return_nullptr_from_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/nullptr/test_return_nullptr_from_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/nullptr/test_return_nullptr_from_function.c"
   (function-definition
      f~0 `fn() -> typeof(nullptr)`
      (compound-statement
         (return nullptr)))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration null~4 `ptr<int>` (call (name f~0 `fn() -> typeof(nullptr)`)))
         (return
            (logical-and
               (equal (call (name f~0 `fn() -> typeof(nullptr)`)) nullptr)
               (not (name null~4 `ptr<int>`)))))))

----- stderr -----
